name:                hackage2twitter
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              philopon
maintainer:          philopon.dependence@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable hackage2twitter
  main-is:             main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base               >=4.7   && <4.8
                     , directory          >=1.2   && <1.3
                     , http-conduit       >=2.1   && <2.2
                     , resourcet          >=1.1   && <1.2
                     , lifted-base        >=0.2   && <0.3
                     , transformers       >=0.3   && <0.5
                     , monad-logger       >=0.3   && <0.4
                     , data-default-class >=0.0   && <0.1
                     , twitter-conduit    >=0.0.5 && <0.1
                     , authenticate-oauth >=1.5   && <1.6
                     , bytestring         >=0.10  && <0.11
                     , text               >=1.1   && <1.2
                     , conduit            >=1.1   && <1.2
                     , feed               >=0.3   && <0.4
                     , time               >=1.4   && <1.5
                     , old-locale         >=1.0   && <1.1
  ghc-options:         -Wall -O2 -threaded
  -- hs-source-dirs:      
  default-language:    Haskell2010
